force-app/main/default/objects/Account/fields/Account_Type_custom__c.field-meta.xml
<CustomField>
    <fullName>Account_Type_custom__c</fullName>
    <description>Serves just for purpose of Lead mapping. After this field is updated, also the standard Account Type is updated with the same value</description>
    <inlineHelpText>Serves just for purpose of Lead mapping. After this field is updated, also the standard Account Type is updated with the same value</inlineHelpText>
    <label>Account Type custom</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dealer</fullName>
            </value>
            <value>
                <fullName>Architect</fullName>
            </value>
            <value>
                <fullName>End client</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>