force-app/main/default/objects/Account/fields/AccountEId__c.field-meta.xml
<CustomField>
    <fullName>AccountEId__c</fullName>
    <externalId>true</externalId>
    <label>Account EID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>