force-app/main/default/objects/Account/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Affects discounts for current Account</description>
    <inlineHelpText>Affects discounts for current Account</inlineHelpText>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AccountCategory</valueSetName>
    </valueSet>
</CustomField>