force-app/main/default/objects/Account/fields/Created_date_report__c.field-meta.xml
<CustomField>
    <fullName>Created_date_report__c</fullName>
    <description>CreatedDate for reports</description>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># Created date</label>
    <type>Date</type>
</CustomField>