force-app/main/default/objects/Account/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <formula>IF(
(DiscountAccount__c &gt; 0),
DiscountAccount__c,
IF(
ISPICKVAL(Category__c,&quot;B&quot;),
10,
IF(
ISPICKVAL(Category__c,&quot;C&quot;),
20,
0)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>