force-app/main/default/objects/Account/fields/DiscountAccount__c.field-meta.xml
<CustomField>
    <fullName>DiscountAccount__c</fullName>
    <label>Account Discount</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>