force-app/main/default/objects/Account/fields/DiscountReason__c.field-meta.xml
<CustomField>
    <fullName>DiscountReason__c</fullName>
    <label>Discount Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>