force-app/main/default/objects/Account/fields/Fiscal_year__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_year__c</fullName>
    <formula>IF(MONTH( Created_date_report__c ) &lt; 4 , YEAR( Created_date_report__c )- 1, YEAR( Created_date_report__c ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fiscal year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>