force-app/main/default/objects/Account/fields/Invoicing_Department_Acc__c.field-meta.xml
<CustomField>
    <fullName>Invoicing_Department_Acc__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Invoicing_Department_Acc</description>
    <inlineHelpText>Kontaktní osoba fakturace</inlineHelpText>
    <label>Invoicing Department</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>