force-app/main/default/objects/Account/fields/IsValidated__c.field-meta.xml
<CustomField>
    <fullName>IsValidated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field says whether was account validated in SAP.</description>
    <inlineHelpText>This field says whether was account validated in SAP.</inlineHelpText>
    <label>Validated</label>
    <type>Checkbox</type>
</CustomField>