force-app/main/default/objects/Account/fields/OldAccountDiscount__c.field-meta.xml
<CustomField>
    <fullName>OldAccountDiscount__c</fullName>
    <label>Old Account Discount</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>