force-app/main/default/objects/Account/fields/OwnerSAPId__c.field-meta.xml
<CustomField>
    <fullName>OwnerSAPId__c</fullName>
    <label>OwnerSAPId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>