force-app/main/default/objects/Account/fields/ProformaPaymentTerm__c.field-meta.xml
<CustomField>
    <fullName>ProformaPaymentTerm__c</fullName>
    <label>Proforma Payment Term</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>