force-app/main/default/objects/Account/fields/ProformaPercent_Acc__c.field-meta.xml
<CustomField>
    <fullName>ProformaPercent_Acc__c</fullName>
    <inlineHelpText>Procento zálohové platby</inlineHelpText>
    <label>Proforma %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>