force-app/main/default/objects/Account/fields/QuoteDescription__c.field-meta.xml
<CustomField>
    <fullName>QuoteDescription__c</fullName>
    <description>Overide default Quote Description for Quote created for this Account</description>
    <inlineHelpText>Overide default Quote Description for Quote created for this Account</inlineHelpText>
    <label>Quote Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>