force-app/main/default/objects/Account/fields/Sales_target_current_FY__c.field-meta.xml
<CustomField>
    <fullName>Sales_target_current_FY__c</fullName>
    <label>Sales target - current FY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>