force-app/main/default/objects/Account/fields/TaxNo__c.field-meta.xml
<CustomField>
    <fullName>TaxNo__c</fullName>
    <inlineHelpText>DIČ</inlineHelpText>
    <label>DIČ</label>
    <length>20</length>
    <type>Text</type>
</CustomField>