force-app/main/default/objects/Account/fields/VatNo__c.field-meta.xml
<CustomField>
    <fullName>VatNo__c</fullName>
    <inlineHelpText>IČ</inlineHelpText>
    <label>IČ</label>
    <length>20</length>
    <type>Text</type>
</CustomField>