force-app/main/default/objects/Account/fields/X_SapId__c.field-meta.xml
<CustomField>
    <fullName>X_SapId__c</fullName>
    <description>Used for initial data import</description>
    <inlineHelpText>Used for initial data import</inlineHelpText>
    <label>X SAP ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>