force-app/main/default/objects/Account/validationRules/Account_synced_and_locked.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_synced_and_locked</fullName>
    <active>true</active>
    <description>If record is Synced - it can NOT be changed. Except System Admin (sync license)</description>
    <errorConditionFormula>AND(
	$User.LastName != &quot;Admin&quot;,
	$User.LastName != &quot;Site Guest User&quot;,
	$User.LastName != &quot;Tartanov&quot;,
	$User.LastName != &quot;SilentLab&quot;,
	ISPICKVAL(SyncStatus__c, &quot;SUCCESS&quot;),
	OR(
		ISCHANGED(BillingCity),
		ISCHANGED(BillingCountryCode),
		ISCHANGED(BillingPostalCode),
		ISCHANGED(BillingStateCode),
		ISCHANGED(BillingStreet),
		ISCHANGED(ShippingCity),
		ISCHANGED(ShippingCountryCode),
		ISCHANGED(ShippingPostalCode),
		ISCHANGED(ShippingStateCode),
		ISCHANGED(ShippingStreet),
		ISCHANGED(CurrencyIsoCode),
		ISCHANGED(Id),
		ISCHANGED(IsValidated__c),
		ISCHANGED(Name),
		ISCHANGED(OwnerSAPId__c),
		ISCHANGED(TaxNo__c),
		ISCHANGED(VatNo__c)
	)
)</errorConditionFormula>
    <errorMessage>Account is already synced and locked</errorMessage>
</ValidationRule>