force-app/main/default/objects/Account/validationRules/Billing_City_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Billing_City_is_Required</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
$User.LastName != &quot;SU&quot;,
ISBLANK(BillingCity)
)</errorConditionFormula>
    <errorDisplayField>BillingCity</errorDisplayField>
    <errorMessage>Billing City is required</errorMessage>
</ValidationRule>