force-app/main/default/objects/Account/validationRules/Discount_Reason_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Discount_Reason_Check</fullName>
    <active>true</active>
    <errorConditionFormula>AND(!($Profile.Name == &apos;SilentLab Power User&apos;), $Setup.ApprovalSettings__c.NeedApprove__c, ISCHANGED(DiscountAccount__c), DiscountAccount__c &gt; 0.15, DiscountReason__c == &apos;&apos;)</errorConditionFormula>
    <errorDisplayField>DiscountReason__c</errorDisplayField>
    <errorMessage>When Account Discount is higher than 15 Discount Reason must be filed.</errorMessage>
</ValidationRule>