force-app/main/default/objects/Account/validationRules/VAT_must_be_set_before_Sync_to_SAP.validationRule-meta.xml
<ValidationRule>
    <fullName>VAT_must_be_set_before_Sync_to_SAP</fullName>
    <active>true</active>
    <description>VAT must be set before Sync to SAP</description>
    <errorConditionFormula>AND(
ISBLANK(VatNo__c),
ISPICKVAL(SyncStatus__c,&quot;FORCE&quot;)
)</errorConditionFormula>
    <errorMessage>VAT must be set before Sync to SAP</errorMessage>
</ValidationRule>