force-app/main/default/objects/Account/listViews/AccountsWithoutBillingShippingCity.listView-meta.xml
<ListView>
    <fullName>AccountsWithoutBillingShippingCity</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>VatNo__c</columns>
    <columns>TaxNo__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>SyncStatusIcon__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.ADDRESS2_CITY</field>
        <operation>equals</operation>
    </filters>
    <label>Accounts without Billing/Shipping City</label>
</ListView>