force-app/main/default/objects/Account/listViews/AllAccounts.listView-meta.xml
<ListView>
    <fullName>AllAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>ACCOUNT.LAST_ACTIVITY</columns>
    <columns>DiscountAccount__c</columns>
    <columns>SyncStatusIcon__c</columns>
    <columns>VatNo__c</columns>
    <columns>ACCOUNT.URL</columns>
    <columns>AccountEId__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.FIRST_NAME</field>
        <operation>equals</operation>
        <value>Stefan</value>
    </filters>
    <label>All Accounts</label>
</ListView>