force-app/main/default/objects/Account/listViews/MyAccounts.listView-meta.xml
<ListView>
    <fullName>MyAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.ADDRESS1_COUNTRY_CODE</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>ACCOUNT.LAST_ACTIVITY</columns>
    <columns>Discount__c</columns>
    <columns>VatNo__c</columns>
    <columns>SyncStatusIcon__c</columns>
    <columns>ACCOUNT.URL</columns>
    <filterScope>Mine</filterScope>
    <label>My Accounts</label>
</ListView>